--- a/sp5-chap17/src/main/webapp/WEB-INF/web.xml
+++ b/sp5-chap17/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
 			org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
 		<init-param>
+			<param-name>spring.profiles.active</param-name>
+			<param-value>dev</param-value>
+		</init-param>
+		<init-param>
 			<param-name>contextClass</param-name>
 			<param-value>
 				org.springframework.web.context.support.AnnotationConfigWebApplicationContext
@@ -20,9 +24,8 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-				config.MemberConfig
-				config.MvcConfig
-				config.ControllerConfig
+				config.DsDevConfig
+				config.DsRealConfig
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
